--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Science -- History -- Periodicals'
 - !lcc 'AP'
 - !lcsh 'Literature, Modern -- 19th century -- Periodicals'
+- GITenberg
 title: The International Monthly Magazine - Volume V - No II
 url: http://www.gutenberg.org/ebooks/20102
